Bug 1476603: Fix DEAD_STORE error in dom/indexedDB/ActorsParent.cpp. r=janv

MozReview-Commit-ID: B6oqb3tp3ND